--- a/Persona4GoldenHelper/Client/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Client/Pages/Accessories.razor
@@ -1,7 +1,7 @@
 ﻿@page "/accessories"
 @inject HttpClient Http;
 
-<div class="content">
+<div class="content-normal">
     <h1>Accessories</h1>
     <table>
         <thead>
