--- a/Persona4GoldenHelper/Client/Pages/Lunches.razor
+++ b/Persona4GoldenHelper/Client/Pages/Lunches.razor
@@ -1,13 +1,13 @@
 ﻿@page "/lunches"
 @inject HttpClient Http;
 
-<div class="narrow-content">
+<div class="content-very-narrow">
     <h1 class="text-align-centre">Lunches</h1>
     <table>
         <thead>
             <tr>
-                <th class="slim-column text-align-centre">Name</th>
-                <th class="slim-column text-align-centre">Method</th>
+                <th class="column-slim text-align-centre">Name</th>
+                <th class="column-slim text-align-centre">Method</th>
             </tr>
         </thead>
         <tbody>
