--- a/Persona4GoldenHelper/Client/Pages/Plants.razor
+++ b/Persona4GoldenHelper/Client/Pages/Plants.razor
@@ -1,7 +1,7 @@
 ﻿@page "/plants"
 @inject HttpClient Http;
 
-<div class="content">
+<div class="content-normal">
     <h1>Plants</h1>
     <table>
         <thead>
