--- a/Persona4GoldenHelper/Client/Pages/Quests.razor
+++ b/Persona4GoldenHelper/Client/Pages/Quests.razor
@@ -1,16 +1,16 @@
 ﻿@page "/quests"
 @inject HttpClient Http;
 
-<div class="wide-content">
+<div class="content-wide">
     <h1>Quests</h1>
     <table>
         <thead>
             <tr>
-                <th class="extra-slim-column text-align-centre">Number</th>
+                <th class="column-very-slim text-align-centre">Number</th>
                 <th>Title</th>
-                <th class="slim-column text-align-centre">Quest Giver</th>
+                <th class="column-slim text-align-centre">Quest Giver</th>
                 <th class="text-align-centre">Location</th>
-                <th class="slim-column text-align-centre">Available</th>
+                <th class="column-slim text-align-centre">Available</th>
                 <th class="text-align-centre">Prerequisities</th>
                 <th class="text-align-centre">Reward</th>
                 <th>Instructions</th>
