--- a/Persona4GoldenHelper/Client/Pages/SkillCards.razor
+++ b/Persona4GoldenHelper/Client/Pages/SkillCards.razor
@@ -1,7 +1,7 @@
 ﻿@page "/skillcards"
 @inject HttpClient Http;
 
-<div class="half-content">
+<div class="content-narrow">
     <h1>Skill Cards</h1>
     
     <div>
@@ -10,8 +10,8 @@
         <table>
             <thead>
                 <tr>
-                    <th class="text-align-centre slim-column">Dungeon</th>
-                    <th class="text-align-centre slim-column">Skill Card Ranks Found</th>
+                    <th class="text-align-centre column-slim">Dungeon</th>
+                    <th class="text-align-centre column-slim">Skill Card Ranks Found</th>
                 </tr>
             </thead>
             <tbody>
@@ -37,7 +37,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <th class="text-align-centre extra-slim-column">Rank</th>
+                                <th class="text-align-centre column-very-slim">Rank</th>
                                 <th>Skill Cards</th>
                             </tr>
                         </thead>
