--- a/Persona4GoldenHelper/Client/Pages/Skills.razor
+++ b/Persona4GoldenHelper/Client/Pages/Skills.razor
@@ -1,14 +1,14 @@
 ﻿@page "/skills"
 @inject HttpClient Http;
 
-<div class="content">
+<div class="content-normal">
     <h1>Skills</h1>
     <table>
         <thead>
             <tr>
                 <th>Name</th>
                 <th>Effect</th>
-                <th class="slim-column text-align-centre">Cost</th>
+                <th class="column-slim text-align-centre">Cost</th>
                 <th>Personas</th>
             </tr>
         </thead>
