Change highlighted text colour

--- a/Persona4GoldenHelper/Client/wwwroot/css/app.css
+++ b/Persona4GoldenHelper/Client/wwwroot/css/app.css
@@ -29,6 +29,15 @@
 
 
 /*********
+** Browser Styles
+*********/
+::selection {
+    background-color: var(--text-colour-primary);
+    color: var(--background-colour-light);
+}
+
+
+/*********
 ** Blazor styles
 *********/
 #blazor-error-ui {
