--- a/Persona4GoldenHelper/Client/Shared/Navbar.razor
+++ b/Persona4GoldenHelper/Client/Shared/Navbar.razor
@@ -4,19 +4,19 @@
     </div>
     <div>
         <ul>
-            <li><a href="/personas">Personas</a></li>
-            <li><a href="/skills">Skills</a></li>
-            <li><a href="/books">Books</a></li>
-            <li><a href="/weapons">Weapons</a></li>
-            <li><a href="/armour">Armour</a></li>
-            <li><a href="/accessories">Accessories</a></li>
-            <li><a href="/examanswers">Exam Answers</a></li>
-            <li><a href="/plants">Plants</a></li>
-            <li><a href="/quests">Quests</a></li>
-            <li><a href="/shadows">Shadows</a></li>
-            <li><a href="/lunches">Lunches</a></li>
-            <li><a href="/skillcards">Skill Cards</a></li>
-            <li><a href="https://github.com/AndyCrocker/Persona4GoldenHelper" target="_blank">Source Code</a></li>
+            <li><a href="/personas">Personas</a>
+            </li><li><a href="/skills">Skills</a>
+            </li><li><a href="/books">Books</a>
+            </li><li><a href="/weapons">Weapons</a>
+            </li><li><a href="/armour">Armour</a>
+            </li><li><a href="/accessories">Accessories</a>
+            </li><li><a href="/examanswers">Exam Answers</a>
+            </li><li><a href="/plants">Plants</a>
+            </li><li><a href="/quests">Quests</a>
+            </li><li><a href="/shadows">Shadows</a>
+            </li><li><a href="/lunches">Lunches</a>
+            </li><li><a href="/skillcards">Skill Cards</a>
+            </li><li><a href="https://github.com/AndyCrocker/Persona4GoldenHelper" target="_blank">Source Code</a></li>
         </ul>
     </div>
 </div>
