--- a/Persona4GoldenHelper/Client/Pages/ExamAnswers.razor
+++ b/Persona4GoldenHelper/Client/Pages/ExamAnswers.razor
@@ -20,8 +20,8 @@
                         @foreach (var examAnswer in GetExamAnswersByMonth(month))
                         {
                             <tr>
-                                <td class="text-align-centre">@examAnswer.DateAsked</td>
-                                <td class="text-primary white-space-pre-line">@examAnswer.QuestionAsked</td>
+                                <td class="text-secondary text-align-centre">@examAnswer.DateAsked</td>
+                                <td class="white-space-pre-line">@examAnswer.QuestionAsked</td>
                                 <td>@examAnswer.QuestionAnswer</td>
                             </tr>
                         }
