--- a/Persona4GoldenHelper/Client/Pages/Lunches.razor
+++ b/Persona4GoldenHelper/Client/Pages/Lunches.razor
@@ -15,7 +15,7 @@
                 foreach (var lunch in AllLunches)
                 {
                     <tr>
-                        <td class="text-primary text-align-centre">@lunch.Name</td>
+                        <td class="text-align-centre">@lunch.Name</td>
                         <td class="text-align-centre">@lunch.Method</td>
                     </tr>
                 }
