--- a/Persona4GoldenHelper/Client/Pages/Quests.razor
+++ b/Persona4GoldenHelper/Client/Pages/Quests.razor
@@ -21,8 +21,8 @@
                 foreach (var quest in AllQuests)
                 {
                     <tr>
-                        <td class="text-align-centre">@quest.Number</td>
-                        <td class="text-primary">@quest.Title</td>
+                        <td class="text-secondary text-align-centre">@quest.Number</td>
+                        <td>@quest.Title</td>
                         <td class="text-align-centre">@quest.QuestGiver</td>
                         <td class="text-align-centre">@quest.Location</td>
                         <td class="text-align-centre">@quest.DateAvailable</td>
