--- a/Persona4GoldenHelper/Client/Pages/Shadows.razor
+++ b/Persona4GoldenHelper/Client/Pages/Shadows.razor
@@ -39,19 +39,19 @@
                             }
 
                             <td class="text-align-centre shadow-type-@shadow.Type">@(shadow.Type.ToString() == "MiniBoss" ? "Mini Boss" : shadow.Type.ToString())</td>
-                            <td class="text-align-centre">@shadow.Level</td>
-                            <td class="text-align-centre">@shadow.Stats.Strength</td>
-                            <td class="text-align-centre">@shadow.Stats.Magic</td>
-                            <td class="text-align-centre">@shadow.Stats.Endurance</td>
-                            <td class="text-align-centre">@shadow.Stats.Agility</td>
-                            <td class="text-align-centre">@shadow.Stats.Luck</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Physical">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Physical)</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Fire">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Fire)</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Ice">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Ice)</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Electricity">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Electricity)</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Wind">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Wind)</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Light">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Light)</td>
-                            <td class="text-align-centre font-bold affinity-@shadow.ElementAffinities.Darkness">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Darkness)</td>
+                            <td class="text-secondary text-align-centre">@shadow.Level</td>
+                            <td class="text-secondary text-align-centre">@shadow.Stats.Strength</td>
+                            <td class="text-secondary text-align-centre">@shadow.Stats.Magic</td>
+                            <td class="text-secondary text-align-centre">@shadow.Stats.Endurance</td>
+                            <td class="text-secondary text-align-centre">@shadow.Stats.Agility</td>
+                            <td class="text-secondary text-align-centre">@shadow.Stats.Luck</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Physical">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Physical)</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Fire">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Fire)</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Ice">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Ice)</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Electricity">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Electricity)</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Wind">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Wind)</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Light">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Light)</td>
+                            <td class="text-secondary text-align-centre font-bold affinity-@shadow.ElementAffinities.Darkness">@Utilities.ConvertElementAffinityToShortHand(shadow.ElementAffinities.Darkness)</td>
                         </tr>
                     }
                 </tbody>
