--- a/Persona4GoldenHelper/Client/Pages/SkillCards.razor
+++ b/Persona4GoldenHelper/Client/Pages/SkillCards.razor
@@ -19,7 +19,7 @@
                     foreach (var skillCardLocation in AllSkillCardLocations)
                     {
                         <tr>
-                            <td class="text-primary text-align-centre">@skillCardLocation.DungeonName</td>
+                            <td class="text-align-centre">@skillCardLocation.DungeonName</td>
                             <td class="text-align-centre">Ranks @skillCardLocation.RankLowerBound-@skillCardLocation.RankUpperBound</td>
                         </tr>
                     }
@@ -47,7 +47,7 @@
                                 var rankSkillCards = GetSkillCardsByRank(skillCards, i);
     
                                 <tr>
-                                    <td class="text-align-centre">@i</td>
+                                    <td class="text-secondary text-align-centre">@i</td>
                                     <td>
                                         @if (rankSkillCards.Count == 0)
                                         {
@@ -56,7 +56,7 @@
     
                                         @for (int j = 0; j < rankSkillCards.Count; j++)
                                         {
-                                            <span class="text-primary">@rankSkillCards[j].Name</span>@(j != rankSkillCards.Count() - 1 ? ", " : "")
+                                            <span>@rankSkillCards[j].Name</span>@(j != rankSkillCards.Count() - 1 ? ", " : "")
                                         }
                                     </td>
                                 </tr>
