--- a/Persona4GoldenHelper/Client/Pages/Weapons.razor
+++ b/Persona4GoldenHelper/Client/Pages/Weapons.razor
@@ -28,13 +28,13 @@
                                 <tr>
                                     @if (i == 0)
                                     {
-                                        <td rowspan=@weapon.Obtained.Count class="text-primary">@weapon.Name</td>
+                                        <td rowspan=@weapon.Obtained.Count>@weapon.Name</td>
                                         <td rowspan=@weapon.Obtained.Count class="text-align-centre">@weapon.Attack</td>
                                         <td rowspan=@weapon.Obtained.Count class="text-align-centre">@weapon.Accuracy</td>
                                         <td rowspan=@weapon.Obtained.Count>@(weapon.Effect == "" ? "-" : weapon.Effect)</td>
                                     }
 
-                                    <td class="text-align-centre">@(obtain.Price == "" ? "-" : obtain.Price)</td>
+                                    <td class="text-secondary text-align-centre">@(obtain.Price == "" ? "-" : obtain.Price)</td>
                                     <td>@obtain.Obtain</td>
                                 </tr>
                             }
