--- a/Persona4GoldenHelper/Client/wwwroot/css/app.css
+++ b/Persona4GoldenHelper/Client/wwwroot/css/app.css
@@ -110,7 +110,7 @@ a:link, a:visited {
 
 table {
     width: 100%;
-    color: var(--text-colour-secondary);
+    color: var(--text-colour-primary);
     margin-bottom: 2rem;
     border: var(--border-medium);
     border-spacing: 0; /* this is used instead of border-collapse so border-radius works correctly */
