Change source hyperlinks to open in new tab

--- a/Persona4GoldenHelper/Client/Pages/Index.razor
+++ b/Persona4GoldenHelper/Client/Pages/Index.razor
@@ -25,7 +25,7 @@
                 <td>
                     @foreach (var link in source.Value)
                     {
-                        <a href="@link.Link">@link.DisplayName</a>
+                        <a href="@link.Link" target="_blank">@link.DisplayName</a>
                     }
                 </td>
             </tr>
